@startuml
skinparam linetype ortho
hide empty members

class EasyNmea
class EasyNmeaImpl
enum ReturnCode
class NMEA0183Data
class GPGGAData
class Bitmask<typename E>
class NMEA0183DataKind
class NMEA0183DataKindMask<NMEA0183DataKind>

EasyNmea : EasyNmea() noexcept
EasyNmea : virtual ReturnCode open(const char* serial_port, long baudrate) noexcept
EasyNmea : virtual bool is_open() noexcept
EasyNmea : virtual ReturnCode close() noexcept
EasyNmea : virtual ReturnCode take_next(GPGGAData& gpgga) noexcept
EasyNmea : virtual ReturnCode wait_for_data(NMEA0183DataKindMask data_mask, std::chrono::milliseconds timeout) noexcept

ReturnCode : RETURN_CODE_OK
ReturnCode : RETURN_CODE_NO_DATA
ReturnCode : RETURN_CODE_TIMEOUT
ReturnCode : RETURN_CODE_BAD_PARAMETER
ReturnCode : RETURN_CODE_ILLEGAL_OPERATION
ReturnCode : RETURN_CODE_UNSUPPORTED
ReturnCode : RETURN_CODE_ERROR

NMEA0183Data : NMEA0183DataKind kind

GPGGAData : float timestamp
GPGGAData : float latitude
GPGGAData : float longitude
GPGGAData : uint16_t fix
GPGGAData : uint16_t satellites_on_view
GPGGAData : float horizontal_precision
GPGGAData : float altitude
GPGGAData : float height_of_geoid
GPGGAData : float dgps_last_update
GPGGAData : uint16_t dgps_reference_station_id

Bitmask : void set(const E& value)
Bitmask : void clear(const E& value)
Bitmask : bool is_set(const E& value)
Bitmask : Bitmask none()
Bitmask : Bitmask all()
Bitmask : bool is_none()

NMEA0183DataKind : INVALID
NMEA0183DataKind : GPGGA

EasyNmea <.. ReturnCode : <<uses>>
EasyNmea <.. GPGGAData : <<uses>>
EasyNmea <.. NMEA0183DataKindMask : <<uses>>
EasyNmea <|.. EasyNmeaImpl

NMEA0183Data <.. NMEA0183DataKind : <<uses>>

NMEA0183Data <|-- GPGGAData

Bitmask <.. NMEA0183DataKindMask : <<bind>>

NMEA0183DataKindMask <.. NMEA0183DataKind : <<uses>>

@enduml
